﻿1.2.0.11 Release notes
* Obliterate is 10% bonus damage per disease (In game tool tip is wrong) (Thanks to Starfox)
* Off Hand BCB correction (Thanks to Larisroth)
* Off Hand Fallen Crusader correction (Thanks to Larisroth)

1.2.0.10 Release notes
* Icy Talon given 4% haste on patch mode

1.2.0.9 Release notes
* Glyph of Obliterate back to 20% on patch mode.
* Razorice in Main hand should not crash the sim.

1.2.0.8 Release notes
* Bryntroll normal/heroic should now be accurate.
* Racial Expertise finally corrected.
* A new EP value: Personal Expertise: Give you the expertise value regarding your actual Expertise.
* DPS Variance apears if Multiple fight are selected.
* Patch 3.3.3 - Check the box on the main screen to enable them:
- Rune of Razorice: Now stacks 5 stacks of 2% Frost Vulnerability instead of 10 stacks of 1% Frost Vulnerability. Proc chance changed to 100%.
- Endless Winter: No longer causes Frost Fever to be applied by Chains of Ice, but instead grants 2/4% strength. 
- Nerves of Cold Steel: Now increases off-hand damage by 8/16/25%, up from 5/10/15%.
- Unbreakable Armor: The amount of strength granted is now 20%, up from 10%.
- Glyph of Obliterate increased to 25%, up from 20%
- Scourge Strike: Now deals 70% weapon damage, plus 12% of physical damage done as shadow damage for each of the death knight's diseases on the targe

1.2.0.7 Release notes
* Racial Expertise correction.
* Spell Hit EP value correction.
* Shadowmourne and Bryntroll heroic procs.
* EP Calculation/ Talent Value in Frost Presence are made againts TPS and not DPS.
* Rune strike is no more considered as a White hit.
* Sigil of Hanged Man.
* When you "save as new" it's automaticaly selected.


1.2.0.6 Release notes
* Reaping rotation correction.
* BloodWorms implemented, should not be too far from game.
* Only one progress bar for all simulation
* Remove Magical Scourge Strike procs (Bryntoll...)
* Lootlink Link/ Pawn string

1.2.0.5 Release notes
* EP Haste Estimated correction.